2003-11-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Fix a bug of Gdk::Window#pointer 
	* src/rbgtkconst.c: Update version number.

2003-11-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Fix a bug for Gtk::Widget#style_get_property.
	Add Gtk::Widget.style_properties.

2003-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Add Gdk.display_arg_name, .set_locale, 
	.set_sm_client_id, .notify_startup_complete, .program_class,
	.set_program_class, .display, .error_trap_push, .error_trap_pop.
	* src/rbgdktimecoord.c: Added. 
	* src/rbgtk.h: Add GDK_TYPE_TIME_COORD.
	* src/rbgdkdevice.c: Added.

2003-11-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdragcontext.c: Rename Gdk::DragContext.protocol to 
	Gdk::DragContext.get_protocol.
	Rename Gdk::DragContext#motion to Gdk::DragContext#drag_motion.
	Add Gdk::DragContext.begin.
	Support GTK+-2.2 methods.
	* src/rbgdkselection.c: Support GTK+-2.2 methods. 
	* src/rbgdkpixbuf.c: Add Gdk::Pixbuf#render_threshold_alpha,
	Gdk::Pixbuf.from_image.
	* src/rbgdkrgb.c: Unified Gdk::RGB.draw_rgb_image and
	.draw_rgb_image_dithalign.
	Rename Gdk::RGB.cmap to Gdk::RGB.colormap.
	Add Gdk::RGB.draw_indexed_image, .find_color, .set_install, 
	.set_min_colors, .ditherable?, set_verbose.
	* src/rbgdkgc.c: Add Gdk::GC#foreground, #background, #function,
	#fill, #tile, #stipple, #ts_origin, #clip_origin, #clip_mask,
	#subwindow_mode, #exposures?, #line_attributes.
	Rename Gdk::GC#set_subwindow to Gdk::GC#set_subwindow_mode.
	* src/rbgtktreeiter.c: Fix a segfault in Gtk::TreeIter#next!.
	Pointed out by Matthew Berg.

2003-11-01  Laurent Sansonetti  <laurent@datarescue.be>
                                                                                               
	* sample/misc/stock.rb: Follow Gtk::Image changes (was broken).

2003-11-01  Matthew Berg <galt@gothpoodle.com>

	* src/rbgtkmenu.c: Fix a crash in Gtk::Menu#popup.

2003-10-28  Matthew Berg <galt@gothpoodle.com>
